--- a/sm8_gsa.Rmd
+++ b/sm8_gsa.Rmd
@@ -844,7 +844,7 @@ pwf_stage <- goseq::nullp(deg.stage.vec,"hg19","ensGene")
 
 # Optional exercise (not marked)
 
--   Run `fgsea` or [`GSEABase`](https://bioconductor.org/packages/release/bioc/html/GSEABase.html) for the same DEGs testing the interaction effect (0.5 pt). What will be your choice of gene-level scores? You can also take into account the sign of effect sizes.
+-   Run `fgsea` or [`GSEABase`](https://bioconductor.org/packages/release/bioc/html/GSEABase.html) for the same DEGs testing the effect of developmental stage (0.5 pt). What will be your choice of gene-level scores?
 
 For reproducibility, please set the parameter `nproc = 1` from `fgsea()` function and don't change the seed in the following chunk:
 
